# vsgXchange

./: CMakeLists.txt
applications/vsgconv/: CMakeLists.txt  vsgconv.cpp
src/: vsgXchangeConfig.cmake.in
src/freetype/: FreeTypeFont.cpp
